--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="particles-js"></div>
-    <div class="wave"></div>
-    <header>
+    <header id="particles-js">
         <h1>Mon Portfolio</h1>
         <nav>
             <ul>
