--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header id="particles-js">
+    <div id="particles-js"></div>
+    <header>
         <h1>Mon Portfolio</h1>
         <nav>
             <ul>
@@ -62,9 +63,9 @@
     <script>
     particlesJS('particles-js', {
         particles: {
-        number: { value: 100 },
+        number: { value: 75 },
         size: { value: 3 },
-        move: { speed: 2 },
+        move: { speed: 4 },
         shape: { type: 'circle' },
         opacity: { value: 1 },
         },
