Rajout de la partie compétence
Rajout de la partie compétence

--- a/index.html
+++ b/index.html
@@ -119,6 +119,29 @@
     </div>
 </div>
 
+<!-- Compétences -->
+<div class="skills section second" id="skills">
+    <div class="container">
+        <h1>Compétences<br>Techniques</h1>
+        <ul class="skill-list list-flat">
+            <li>Développement Mobile</li>
+            <li>Kotlin / Android Studio / Firebase</li>
+        </ul>
+        <ul class="skill-list list-flat">
+            <li>Développement Logiciel</li>
+            <li>C# / C++ / Java </li>
+        </ul>
+        <ul class="skill-list list-flat">
+            <li>Base de données & backend</li>
+            <li>Firebase / MongoDB / MySQL</li>
+        </ul>
+        <ul class="skill-list list-flat">
+            <li>Embarqué & IoT</li>
+            <li>ESP32 / C++ / NFC / Bluetooth</li>
+        </ul>
+    </div>
+</div>
+
 <!-- Footer -->
 <footer>
     <div class="container">
